# Jxplayer

./: .gitignore  CMakeLists.txt
player/include/: Igl_context.h  Iplayback_listener.h  Iplayer.h  Ivideo_filter.h
player/qt/: openGL_view.cpp  openGL_view.h
player/src/core/: sync_notifier.cpp  sync_notifier.h  task_pool.cpp  task_pool.h
player/src/define/: Iaudio_samples.h  Iav_packet.h  Ivideo_frame.h  base_define.h  file_writer_parameters.h
player/src/engine/: audio_pipeline.cpp  audio_pipeline.h  audio_speaker.cpp  audio_speaker.h  av_synchronizer.cpp  av_synchronizer.h  gl_context.cpp  player.cpp  player.h  video_display_view.cpp  video_display_view.h  video_pipeline.cpp  video_pipeline.h
player/src/filter/: flip_vertical_filter.cpp  flip_vertical_filter.h  gray_filter.cpp  gray_filter.h  invert_filter.cpp  invert_filter.h  pause_filter.cpp  pause_filter.h  sticker_filter.cpp  sticker_filter.h  video_filter.cpp  video_filter.h
player/src/interface/: Iaudio_pipeline.h  Iaudio_speaker.h  Ifile_reader.h  Ifile_writer.h  Ivideo_display_view.h  Ivideo_pipeline.h
player/src/reader/: audio_decoder.cpp  audio_decoder.h  demuxer.cpp  demuxer.h  file_reader.cpp  file_reader.h  video_decoder.cpp  video_decoder.h
player/src/reader/interface/: Iaudio_decoder.h  Idemuxer.h  Ivideo_decoder.h
player/src/sr/: base_sr.h  fsrcnn_sr.cpp  fsrcnn_sr.h  onnx_infer.cpp  onnx_infer.h  sr_model_factory.cpp  sr_model_factory.h
player/src/utils/: gl_utils.cpp  gl_utils.h
player/src/writer/: audio_encoder.cpp  audio_encoder.h  file_writer.cpp  file_writer.h  muxer.cpp  muxer.h  video_encoder.cpp  video_encoder.h
player/src/writer/interface/: Iaudio_encoder.h  Imuxer.h  Ivideo_encoder.h
qt/: main.cpp  mainwindow.cpp  mainwindow.h
qt/ui/: controllerwidget.cpp  controllerwidget.h  player_slider.cpp  player_slider.h  playerwidget.cpp  playerwidget.h
resource/model/: fsrcnn_x2.onnx
